furniture-store-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ssa1-furniture-store
    annotations:
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ssa1.furniture.store
      http:
        paths:
        - backend:
            service:
              name: ssa1-furniture-catalog-service
              port:
                number: 8081
          path: /catalog/(.*)
          pathType: Prefix
        - backend:
            service:
              name: ssa1-furniture-inventory-service
              port:
                number: 8082
          path: /inventory/(.*)
          pathType: Prefix
        - backend:
            service:
              name: ssa1-furniture-order-service
              port:
                number: 8083
          path: /sales/(.*)
          pathType: Prefix
